# Track-planning-and-control-

./: README.md  frames.gv
Refer_Docs/SBG_zxw/SBG/: SBG使用教程
devel/lib/pkgconfig/: cancontrol.pc  cancontrol_ultra.pc  config.pc  launch_files.pc
devel/share/cancontrol/cmake/: cancontrolConfig.cmake
devel/share/cancontrol_ultra/cmake/: cancontrol_ultraConfig.cmake
src/cancontrol/: CMakeLists.txt  package.xml
src/cancontrol/src/: cancontrol (1124).cpp  cancontrol.cpp
src/cancontrol/src/main.cpp_backup/: main1114.cpp  main1116.cpp
src/cancontrol_ultra/: CMakeLists.txt
src/cancontrol_ultra/include/: controlcan.h  pid.h
src/cancontrol_ultra/src/: cancontrol_ultra (20201128).cpp  cancontrol_ultra (copy).cpp  cancontrol_ultra_loop.cpp
src/cancontrol_ultra/src/main.cpp_backup/: Ultrasound_backup.cpp  main1115.cpp  main1117.cpp
src/car_navigation321/: CMakeLists.txt
src/car_navigation321/src/: navigation.cpp
src/config/: car_gps_path.rviz  odom_tf.rviz  package.xml  uart_port_baud_rate.yaml
src/launch_files/: CMakeLists.txt
src/launch_files/launch/: can_ultra.launch  can_ultra_loop.launch  can_ultra_rviz.launch  car_navigation.launch  odom_tf.launch  readme.md  sbg_ellipse.launch  uart_port_baud_rate.yaml  ultra_pub.launch
src/odom_tf/: CMakeLists.txt  package.xml
src/odom_tf/src/: odom_tf.cpp
src/ultra_serial_port/: CMakeLists.txt  package.xml
src/ultra_serial_port/src/: Ultra_publish (single ).cpp  Ultra_publish(double).cpp  Ultra_publish0.cpp  ultra_publish.cpp
src/ultra_sub/: CMakeLists.txt  package.xml
src/ultra_sub/can (0)/: CMakeLists.txt  package.xml
src/ultra_sub/can (0)/src/: main_can_Ultra.cpp
src/ultra_sub/src/: ultra_sub.cpp
(+3 files in other folders)
